<resources>
    <string name="app_name">FANTASIC</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strLogo">logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="clear">Clear</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="register_account">Register account</string>
</resources>
