<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/imgLogo"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@mipmap/ic_launcher"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="12dp"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/strLogo"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/edtEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="Autofill"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/edtPassword"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="Autofill"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            android:text="@string/forgot_password"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnClear"
            android:background="@drawable/background_btn"
            android:text="@string/login"
            android:layout_marginTop="10dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_marginEnd="2dp"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/btnClear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPass"
            android:background="@drawable/background_btn_cancel"
            app:layout_constraintBaseline_toBaselineOf="@id/btnLogin"
            android:layout_marginTop="10dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_marginStart="2dp"
            android:textSize="16sp"
            android:text="@string/clear"
            app:layout_constraintStart_toEndOf="@id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    <TextView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="12dp"
            android:text="@string/register_account"
            android:id="@+id/btnCreateNewAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvLabelName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="name"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="62dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>

    <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Mr. Ian Citizen"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/tvLabelName"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvLabelName"/>

</androidx.constraintlayout.widget.ConstraintLayout>